data/raw_logs/semantic/sem_34.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_34.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_34.c:1:35: error: invalid operands to binary * (have 'int *' and 'int')
    1 | int main() { int a[10]; int x = a * 2; }
      |                                 ~ ^
      |                                 |
      |                                 int *
